# api-test-machine

./: .gitignore  README.md  alembic.ini  pyproject.toml
agent/: __init__.py  main.py  models.py  orchestrator.py  scheduler.py  storage.py
api/: __init__.py  app.py  auth.py  database.py  models.py  routes.py  schedules.py  sqlite_storage.py  storage.py  storage_base.py
api/reports/: __init__.py  pdf_generator.py
cli/: __init__.py  config.py  main.py
cli-monitor/: .gitignore  Package.swift  README.md
cli-monitor/Sources/ATMMonitor/: ANSIRenderer.swift  Dashboard.swift  DataFetcher.swift  KeyboardInput.swift  Models.swift  MonitorConfig.swift  TerminalBuffer.swift  Widgets.swift  main.swift
docs/: API.md  ARCHITECTURE.md  MCP_GUIDE.md  MODULARIZATION.md  PLAN.md
engine/: __init__.py  auth.py  executor.py  metrics.py  models.py  rate_limiter.py  templating.py
examples/: los-altos-weather.json  mcp-demo-prompts.md  nyc-weather.json  sample-spec.json
ios-app/: .gitignore  README.md
ios-app/APITestMachine/APITestMachine.xcodeproj/: project.pbxproj
mcp/: server.py
mcp_server/: __init__.py  server.py
migrations/: env.py
migrations/versions/: 001_initial_runs_table.py  002_add_test_configs_table.py
mock-server/: pyproject.toml  server.py
tests/: __init__.py  conftest.py
tests/api/: test_reports.py  test_routes.py
tests/engine/: test_auth.py  test_executor.py  test_metrics.py  test_models.py  test_multi_endpoint.py  test_rate_limiter.py  test_templating.py
webapp/: package-lock.json  package.json
webapp/src/: app.css  app.html
(+55 files in other folders)
