[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "api-test-machine"
version = "0.1.0"
description = "REST API load testing system with CLI, MCP, and WebApp interfaces"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "API Test Machine Team" }
]
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "typer>=0.9",
    "rich>=13.0",
    "apscheduler>=3.10",
    "mcp>=1.0",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.19",
    "greenlet>=3.0",
]

[project.optional-dependencies]
auth = ["PyJWT>=2.8"]
postgres = ["asyncpg>=0.29"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "httpx[http2]>=0.27",
    "alembic>=1.13",
]

[project.scripts]
atm = "cli.main:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[tool.hatch.build.targets.wheel]
packages = ["engine", "api", "agent", "cli", "mcp_server"]
