[project]
name = "mock-server"
version = "0.1.0"
description = "Minimal mock API server for testing"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest", "httpx"]

[project.scripts]
mock-server = "server:main"
